--- a/example.html
+++ b/example.html
@@ -34,9 +34,9 @@
       <div class="last-drop-target" sb-drop-target sb-dragover="onDragover($data, $index)" sb-drop="onDrop($data, items.length+1)">&nbsp;</div>
     </div>
     <script src="./bower_components/angular/angular.js"></script>
-    <script src="./sb-drag-drop.js"></script>
+    <script src="./sb-drag-and-drop.js"></script>
     <script>
-      angular.module('app', ['sbDragDrop'])
+      angular.module('app', ['sbDragAndDrop'])
 
         .controller('Controller', function ($scope) {
 
